--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -16,6 +16,13 @@
 <body class="h-dvh overflow-hidden">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+
+
+  <script>
+    window.visualViewport.addEventListener('resize', () => {
+      document.getElementById('app').style.height = `${window.visualViewport.height}px`;
+    });
+  </script>
 </body>
 
 </html>
